<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/title_activity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/congrats_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textAlignment="center"
        android:textSize="32sp"
        android:textStyle="bold"
        android:layout_marginTop="70dp"
        />

    <ImageView
        android:id="@+id/img_checked_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:src="@drawable/mdi_approve"
        tools:ignore="MissingConstraints"
        app:layout_constraintTop_toBottomOf="@id/title_activity"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/nameLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/img_checked_image"
        android:layout_marginLeft="28dp"
        android:layout_marginTop="40dp"
        >
        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textColor="#000000"
            android:textSize="23sp"
            android:textStyle="bold"
            tools:ignore="MissingConstraints"
            app:layout_constraintStart_toStartOf="@id/nameLayout"
            />
        <TextView
            android:id="@+id/dividerName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=":"
            android:textColor="#000000"
            android:textSize="23sp"
            android:textStyle="bold"
            tools:ignore="MissingConstraints"
            android:layout_marginLeft="32dp"
            app:layout_constraintStart_toEndOf="@id/name"
            />
        <TextView
            android:id="@+id/username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Nama"
            android:textColor="#000000"
            android:textSize="23sp"
            android:textStyle="bold"
            tools:ignore="MissingConstraints"
            android:layout_marginLeft="24dp"
            app:layout_constraintStart_toEndOf="@id/dividerName"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/timeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/nameLayout"
        android:layout_marginLeft="28dp"
        android:layout_marginTop="10dp"
        >
        <TextView
            android:id="@+id/time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/time"
            android:textColor="#000000"
            android:textSize="23sp"
            android:textStyle="bold"
            tools:ignore="MissingConstraints"
            app:layout_constraintStart_toStartOf="@id/timeLayout"
            />
        <TextView
            android:id="@+id/dividerTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=":"
            android:textColor="#000000"
            android:textSize="23sp"
            android:textStyle="bold"
            tools:ignore="MissingConstraints"
            android:layout_marginLeft="32dp"
            android:layout_marginStart="47dp"
            app:layout_constraintStart_toEndOf="@id/time"
            />
        <TextView
            android:id="@+id/usertime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Jam"
            android:textColor="#000000"
            android:textSize="23sp"
            android:textStyle="bold"
            tools:ignore="MissingConstraints"
            android:layout_marginLeft="24dp"
            app:layout_constraintStart_toEndOf="@id/dividerTime"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/dateLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/timeLayout"
        android:layout_marginLeft="28dp"
        android:layout_marginTop="10dp"
        >
        <TextView
            android:id="@+id/date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date"
            android:textColor="#000000"
            android:textSize="23sp"
            android:textStyle="bold"
            tools:ignore="MissingConstraints"
            app:layout_constraintStart_toStartOf="@id/dateLayout"
            />
        <TextView
            android:id="@+id/dividerDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=":"
            android:textColor="#000000"
            android:textSize="23sp"
            android:textStyle="bold"
            tools:ignore="MissingConstraints"
            android:layout_marginStart="10dp"
            app:layout_constraintStart_toEndOf="@id/date"
            />
        <TextView
            android:id="@+id/userdate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Tanggal"
            android:textColor="#000000"
            android:textSize="23sp"
            android:textStyle="bold"
            tools:ignore="MissingConstraints"
            android:layout_marginLeft="24dp"
            app:layout_constraintStart_toEndOf="@id/dividerDate"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/destinationLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/dateLayout"
        android:layout_marginLeft="28dp"
        android:layout_marginTop="10dp"
        >
        <TextView
            android:id="@+id/destination"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/destination"
            android:textColor="#000000"
            android:textSize="23sp"
            android:textStyle="bold"
            tools:ignore="MissingConstraints"
            app:layout_constraintStart_toStartOf="@id/destinationLayout"
            />
        <TextView
            android:id="@+id/dividerDestination"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=":"
            android:textColor="#000000"
            android:textSize="23sp"
            android:textStyle="bold"
            tools:ignore="MissingConstraints"
            android:layout_marginStart="20dp"
            app:layout_constraintStart_toEndOf="@id/destination"
            />
        <TextView
            android:id="@+id/userdestination"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Tujuan"
            android:textColor="#000000"
            android:textSize="23sp"
            android:textStyle="bold"
            tools:ignore="MissingConstraints"
            android:layout_marginLeft="24dp"
            app:layout_constraintStart_toEndOf="@id/dividerDestination"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>



</androidx.constraintlayout.widget.ConstraintLayout>